--- a/03/vite-runner/index.html
+++ b/03/vite-runner/index.html
@@ -1,15 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-       <link rel="icon" type="image/jpg" href="./public/xzq.jpg" />
-
-    <title>Vite App</title>
-
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/jpg" href="/xzq.jpg" />
+  <title>day02</title>
+</head>
+<body>
+  <div id="root"></div>
+  <script type="module" src="main.jsx"></script>
+</body>
 </html>
