--- a/review/vite-runner-day04/index.html
+++ b/review/vite-runner-day04/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/jpg" href="/xzq.jpg" />
-  <title>day02</title>
+  <title>day04</title>
+  <style>
+#bg{color: aqua;}
+
+  </style>
 </head>
 <body>
   <div id="root"></div>
