--- a/review/vite-runner-day03/index.html
+++ b/review/vite-runner-day03/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="/xzq.jpg" />
+    <link rel="icon" type="image/jpg" href="/react.png" />
   <title>day02</title>
 </head>
 <body>
