--- a/review/vite-runner-day06/index.html
+++ b/review/vite-runner-day06/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="/react.png" />
+  <link rel="icon" type="image/jpg" href="/react.png" />
   <title>day05</title>
   <style>
-#bg{color: aqua;}
-
+    #bg {
+      color: aqua;
+    }
   </style>
 </head>
+
 <body>
   <div id="root"></div>
   <script type="module" src="main.jsx"></script>
 </body>
+
 </html>
